@@ -10,6 +10,7 @@ import com.github.scribejava.core.model.OAuthRequestAsync;
 import com.github.scribejava.core.model.Response;
 import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.oauth.OAuth20Service;
+import java.io.IOException;
 
 public abstract class MailruAsyncExample {
 
@@ -17,7 +18,7 @@ public abstract class MailruAsyncExample {
     private static final String PROTECTED_RESOURCE_URL
             = "http://www.appsmail.ru/platform/api?method=users.getInfo&secure=1";
 
-    public static void main(String... args) throws InterruptedException, ExecutionException {
+    public static void main(String... args) throws InterruptedException, ExecutionException, IOException {
         // Replace these with your client id and secret
         final String clientId = "your client id";
         final String clientSecret = "your client secret";
