@@ -7,7 +7,6 @@ import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.model.SignatureType;
 import com.github.scribejava.core.oauth.OAuthService;
 import com.github.scribejava.core.utils.Preconditions;
-import com.ning.http.client.AsyncHttpClientConfig;
 
 /**
  * Implementation of the Builder pattern, with a fluent interface that creates a {@link OAuthService}
@@ -29,8 +28,11 @@ public class ServiceBuilder {
     private Integer readTimeout;
 
     //async version only
-    private AsyncHttpClientConfig asyncHttpClientConfig;
-    private String asyncHttpProviderClassName;
+    //ning 1.9
+    private com.ning.http.client.AsyncHttpClientConfig ningAsyncHttpClientConfig;
+    private String ningAsyncHttpProviderClassName;
+    //AHC 2.0
+    private org.asynchttpclient.AsyncHttpClientConfig ahcAsyncHttpClientConfig;
 
     public ServiceBuilder() {
         callback = OAuthConstants.OUT_OF_BAND;
@@ -133,14 +135,24 @@ public class ServiceBuilder {
         return this;
     }
 
-    public ServiceBuilder asyncHttpClientConfig(AsyncHttpClientConfig asyncHttpClientConfig) {
+    public ServiceBuilder asyncHttpClientConfig(com.ning.http.client.AsyncHttpClientConfig asyncHttpClientConfig) {
         Preconditions.checkNotNull(asyncHttpClientConfig, "asyncHttpClientConfig can't be null");
-        this.asyncHttpClientConfig = asyncHttpClientConfig;
+        ningAsyncHttpClientConfig = asyncHttpClientConfig;
+        ahcAsyncHttpClientConfig = null;
+        return this;
+    }
+
+    public ServiceBuilder asyncHttpClientConfig(org.asynchttpclient.AsyncHttpClientConfig asyncHttpClientConfig) {
+        Preconditions.checkNotNull(asyncHttpClientConfig, "asyncHttpClientConfig can't be null");
+        ahcAsyncHttpClientConfig = asyncHttpClientConfig;
+        ningAsyncHttpClientConfig = null;
+        ningAsyncHttpProviderClassName = null;
         return this;
     }
 
     public ServiceBuilder asyncHttpProviderClassName(String asyncHttpProviderClassName) {
-        this.asyncHttpProviderClassName = asyncHttpProviderClassName;
+        this.ningAsyncHttpProviderClassName = asyncHttpProviderClassName;
+        ahcAsyncHttpClientConfig = null;
         return this;
     }
 
@@ -161,7 +173,8 @@ public class ServiceBuilder {
     private OAuthConfig createConfig() {
         checkPreconditions();
         return new OAuthConfig(apiKey, apiSecret, callback, signatureType, scope, debugStream, state, responseType,
-                userAgent, connectTimeout, readTimeout, asyncHttpClientConfig, asyncHttpProviderClassName);
+                userAgent, connectTimeout, readTimeout, ningAsyncHttpClientConfig, ningAsyncHttpProviderClassName,
+                ahcAsyncHttpClientConfig);
     }
 
     /**
