@@ -1,7 +1,5 @@
 package com.github.scribejava.core.oauth;
 
-import com.github.scribejava.core.async.ning.OAuthAsyncCompletionHandler;
-import com.ning.http.client.AsyncHttpClient;
 import com.github.scribejava.core.exceptions.OAuthException;
 import com.github.scribejava.core.model.AbstractRequest;
 import static com.github.scribejava.core.model.AbstractRequest.DEFAULT_CONTENT_TYPE;
@@ -12,7 +10,7 @@ import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.model.OAuthRequestAsync;
 import com.github.scribejava.core.model.ScribeJavaConfig;
 import com.github.scribejava.core.model.Verb;
-import com.ning.http.client.AsyncHttpClientConfig;
+import java.io.IOException;
 import java.util.Map;
 import java.util.concurrent.Future;
 
@@ -24,20 +22,24 @@ import java.util.concurrent.Future;
 public abstract class OAuthService {
 
     private final OAuthConfig config;
-    private final AsyncHttpClient asyncHttpClient;
+    private final com.ning.http.client.AsyncHttpClient ningAsyncHttpClient;
+    private final org.asynchttpclient.AsyncHttpClient ahcAsyncHttpClient;
 
     public OAuthService(OAuthConfig config) {
         this.config = config;
         final ForceTypeOfHttpRequest forceTypeOfHttpRequest = ScribeJavaConfig.getForceTypeOfHttpRequests();
-        final AsyncHttpClientConfig asyncHttpClientConfig = config.getAsyncHttpClientConfig();
-        if (asyncHttpClientConfig == null) {
+        final com.ning.http.client.AsyncHttpClientConfig ningConfig = config.getNingAsyncHttpClientConfig();
+        final org.asynchttpclient.AsyncHttpClientConfig ahcConfig = config.getAhcAsyncHttpClientConfig();
+
+        if (ningConfig == null && ahcConfig == null) {
             if (ForceTypeOfHttpRequest.FORCE_ASYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
                 throw new OAuthException("Cannot use sync operations, only async");
             }
             if (ForceTypeOfHttpRequest.PREFER_ASYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
                 config.log("Cannot use sync operations, only async");
             }
-            asyncHttpClient = null;
+            ningAsyncHttpClient = null;
+            ahcAsyncHttpClient = null;
         } else {
             if (ForceTypeOfHttpRequest.FORCE_SYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
                 throw new OAuthException("Cannot use async operations, only sync");
@@ -45,15 +47,26 @@ public abstract class OAuthService {
             if (ForceTypeOfHttpRequest.PREFER_SYNC_ONLY_HTTP_REQUESTS == forceTypeOfHttpRequest) {
                 config.log("Cannot use async operations, only sync");
             }
-            final String asyncHttpProviderClassName = config.getAsyncHttpProviderClassName();
 
-            asyncHttpClient = asyncHttpProviderClassName == null ? new AsyncHttpClient(asyncHttpClientConfig)
-                    : new AsyncHttpClient(asyncHttpProviderClassName, asyncHttpClientConfig);
+            if (ahcConfig == null) {
+                final String ningAsyncHttpProviderClassName = config.getNingAsyncHttpProviderClassName();
+                ningAsyncHttpClient = ningAsyncHttpProviderClassName == null
+                        ? new com.ning.http.client.AsyncHttpClient(ningConfig)
+                        : new com.ning.http.client.AsyncHttpClient(ningAsyncHttpProviderClassName, ningConfig);
+                ahcAsyncHttpClient = null;
+            } else {
+                ahcAsyncHttpClient = new org.asynchttpclient.DefaultAsyncHttpClient(ahcConfig);
+                ningAsyncHttpClient = null;
+            }
         }
     }
 
-    public void closeAsyncClient() {
-        asyncHttpClient.close();
+    public void closeAsyncClient() throws IOException {
+        if (ahcAsyncHttpClient == null) {
+            ningAsyncHttpClient.close();
+        } else {
+            ahcAsyncHttpClient.close();
+        }
     }
 
     public OAuthConfig getConfig() {
@@ -70,13 +83,24 @@ public abstract class OAuthService {
     public <T> Future<T> executeAsync(Map<String, String> headers, Verb httpVerb, String completeUrl,
             String bodyContents, OAuthAsyncRequestCallback<T> callback,
             OAuthRequestAsync.ResponseConverter<T> converter) {
-        final AsyncHttpClient.BoundRequestBuilder boundRequestBuilder;
+        if (ahcAsyncHttpClient == null) {
+            return ningExecuteAsync(headers, httpVerb, completeUrl, bodyContents, callback, converter);
+        } else {
+            return ahcExecuteAsync(headers, httpVerb, completeUrl, bodyContents, callback, converter);
+        }
+    }
+
+    private <T> Future<T> ningExecuteAsync(Map<String, String> headers, Verb httpVerb, String completeUrl,
+            String bodyContents, OAuthAsyncRequestCallback<T> callback,
+            OAuthRequestAsync.ResponseConverter<T> converter) {
+        final com.ning.http.client.AsyncHttpClient.BoundRequestBuilder boundRequestBuilder;
         switch (httpVerb) {
             case GET:
-                boundRequestBuilder = asyncHttpClient.prepareGet(completeUrl);
+                boundRequestBuilder = ningAsyncHttpClient.prepareGet(completeUrl);
                 break;
             case POST:
-                AsyncHttpClient.BoundRequestBuilder requestBuilder = asyncHttpClient.preparePost(completeUrl);
+                com.ning.http.client.AsyncHttpClient.BoundRequestBuilder requestBuilder
+                        = ningAsyncHttpClient.preparePost(completeUrl);
                 if (!headers.containsKey(AbstractRequest.CONTENT_TYPE)) {
                     requestBuilder = requestBuilder.addHeader(AbstractRequest.CONTENT_TYPE, DEFAULT_CONTENT_TYPE);
                 }
@@ -94,6 +118,38 @@ public abstract class OAuthService {
             boundRequestBuilder.setHeader(OAuthConstants.USER_AGENT_HEADER_NAME, userAgent);
         }
 
-        return boundRequestBuilder.execute(new OAuthAsyncCompletionHandler<>(callback, converter));
+        return boundRequestBuilder
+                .execute(new com.github.scribejava.core.async.ning.OAuthAsyncCompletionHandler<>(callback, converter));
+    }
+
+    private <T> Future<T> ahcExecuteAsync(Map<String, String> headers, Verb httpVerb, String completeUrl,
+            String bodyContents, OAuthAsyncRequestCallback<T> callback,
+            OAuthRequestAsync.ResponseConverter<T> converter) {
+        final org.asynchttpclient.BoundRequestBuilder boundRequestBuilder;
+        switch (httpVerb) {
+            case GET:
+                boundRequestBuilder = ahcAsyncHttpClient.prepareGet(completeUrl);
+                break;
+            case POST:
+                org.asynchttpclient.BoundRequestBuilder requestBuilder = ahcAsyncHttpClient.preparePost(completeUrl);
+                if (!headers.containsKey(AbstractRequest.CONTENT_TYPE)) {
+                    requestBuilder = requestBuilder.addHeader(AbstractRequest.CONTENT_TYPE, DEFAULT_CONTENT_TYPE);
+                }
+                boundRequestBuilder = requestBuilder.setBody(bodyContents);
+                break;
+            default:
+                throw new IllegalArgumentException("message build error: unknown verb type");
+        }
+
+        for (Map.Entry<String, String> header : headers.entrySet()) {
+            boundRequestBuilder.addHeader(header.getKey(), header.getValue());
+        }
+        final String userAgent = config.getUserAgent();
+        if (userAgent != null) {
+            boundRequestBuilder.setHeader(OAuthConstants.USER_AGENT_HEADER_NAME, userAgent);
+        }
+
+        return boundRequestBuilder
+                .execute(new com.github.scribejava.core.async.ahc.OAuthAsyncCompletionHandler<>(callback, converter));
     }
 }
