@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * make http async client implementation be more pluggable
+ * add async-http-client 2.0 support (thanks to Sai Chandrasekharan https://github.com/saichand)
 
 [2.6.0]
  * simplify async/sync usages
